--- a/construction_project/project1.html
+++ b/construction_project/project1.html
@@ -147,7 +147,7 @@
                         <p>Multi-level shopping complex with entertainment and dining facilities.</p>
                         <div class="project-details">
                             <span><i class="fas fa-calendar"></i> 2022</span>
-                            <span><i class="fas fa-map-marker-alt"></i> Pune</span>
+                            <span><i class="fas fa-map-marker-alt"></i> kamla nagar-agra</span>
                         </div>
                     </div>
                 </div>
@@ -166,7 +166,7 @@
                         <p>Sustainable housing project with green building technologies and energy efficiency.</p>
                         <div class="project-details">
                             <span><i class="fas fa-calendar"></i> 2022</span>
-                            <span><i class="fas fa-map-marker-alt"></i> Bangalore</span>
+                            <span><i class="fas fa-map-marker-alt"></i> fatehabad-agra</span>
                         </div>
                     </div>
                 </div>
@@ -194,5 +194,6 @@
 
     <script src="script1.js"></script>
 </body>
+
 
 </html>
